# mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  docker-bake.hcl  project.json  pyproject.toml  server.json
.github/workflows/: dispatch-upstream.yml  publish.yml
docs/migrations/: livekit.md  pipecat.md  retell.md  vapi.md
scripts/: sync_docs.py
src/spekoai_mcp/: __init__.py  __main__.py  action_tools.py  auth.py  builder_tools.py  business_lookup.py  call_tools.py  code_snippets.py  components.py  dial_token.py  docs.py  docs_tools.py  http_client.py  profiles.py  prompts.py  recommendations.py  resources.py  scaffolds.py  search.py  selector.py  server.py
src/spekoai_mcp/_components/: react_voice_session.tsx
src/spekoai_mcp/_data/: llm-routing-v0.json  s2s-routing-v0.json  seed-dev.json  stt-routing-v0.json  tts-routing-v0.json
src/spekoai_mcp/_well_known/: glama.json
tests/: conftest.py  test_action_tools.py  test_auth.py  test_auth_shared_storage.py  test_builder_profile.py  test_builder_profile_http.py  test_business_lookup.py  test_call_tools.py  test_components.py  test_dial_token.py  test_prompts.py  test_recommended_stack.py  test_resources.py  test_scaffold_voice_app.py  test_search_docs.py  test_selector.py  test_server.py
