[build-system]
requires = ["uv_build>=0.5"]
build-backend = "uv_build"

[project]
name = "spekoai-mcp"
version = "0.1.0"
description = "Model Context Protocol server for SpekoAI — voice-AI tools for Claude, Cursor, and other MCP clients"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SpekoAI" }]
keywords = ["spekoai", "voice-ai", "mcp", "model-context-protocol"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=3.0,<4",
  "pydantic>=2.0.0,<3",
]
# Note: the SpekoAI Python SDK (`spekoai`) is intentionally NOT a
# runtime dep today — this server ships only static knowledge
# surfaces. Re-add it when a tool needs to call `api.speko.ai` on the
# caller's behalf; the OAuth plumbing in `auth.py` is already wired to
# forward the JWT.

[project.scripts]
spekoai-mcp = "spekoai_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/SpekoAI/mcp"
Repository = "https://github.com/SpekoAI/mcp"
Issues = "https://github.com/SpekoAI/mcp/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.uv.build-backend]
module-name = "spekoai_mcp"
module-root = "src"
# Note: `src/spekoai_mcp/_docs/*.md` + `manifest.json` are generated by
# `scripts/sync_docs.py` and must exist before `uv build` runs. The
# Nx `build` target depends on `sync-docs`; the Dockerfile also runs
# the script in its build stage. `uv_build` ships any non-`.py` file
# inside `module-root/module-name/` by default — no include list
# needed here.

# Reserved for when we re-introduce the `spekoai` SDK as a runtime
# dep (see note above). Dev-time override would point at the sibling
# package via:
#   [tool.uv.sources]
#   spekoai = { path = "../sdk-python", editable = true }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
